--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "ng2-bs3-modal": "^0.10.4",
     "rxjs": "^5.1.0",
+    "typescript-collections": "^1.2.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
