--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^4.3.1",
     "core-js": "^2.4.1",
     "ng2-bs3-modal": "^0.10.4",
+    "ng2-page-scroll": "^4.0.0-beta.11",
     "rxjs": "^5.1.0",
     "typescript-collections": "^1.2.3",
     "zone.js": "^0.8.4"
