--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "ng2-bs3-modal": "^0.10.4",
     "ng2-page-scroll": "^4.0.0-beta.11",
+    "ngx-order-pipe": "^1.1.0",
     "rxjs": "^5.1.0",
     "typescript-collections": "^1.2.3",
     "zone.js": "^0.8.4"
