--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-browser": "^4.3.1",
     "@angular/platform-browser-dynamic": "^4.3.1",
     "@angular/router": "^4.3.1",
+    "angular2-csv": "^0.2.5",
+    "angular2-datatable": "^0.6.0",
     "angular2-image-upload": "^1.0.0-rc.0",
     "core-js": "^2.4.1",
+    "devextreme": "^17.2.3",
+    "devextreme-angular": "^17.2.3",
     "ng2-bs3-modal": "^0.10.4",
     "ng2-page-scroll": "^4.0.0-beta.11",
     "ngx-order-pipe": "^1.1.0",
