--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "devextreme-angular": "^17.2.3",
     "ng2-bs3-modal": "^0.10.4",
     "ng2-page-scroll": "^4.0.0-beta.11",
+    "ng2-select": "^2.0.0",
     "ngx-order-pipe": "^1.1.0",
     "rxjs": "^5.1.0",
     "typescript-collections": "^1.2.3",
